IRQ affinity management functionality added ( Isolate interrupts from trading cores etc)